--- a/Scantron/Project Bootstrapper/Bundle.wxs
+++ b/Scantron/Project Bootstrapper/Bundle.wxs
@@ -5,10 +5,11 @@
 	<Bundle Name="K-State Scanner" Version="1.0.0.0" UpgradeCode="fa1bd271-e64f-4785-ba33-3e752ae42ffb"
           Manufacturer="Kansas State University Help Desk" 
           HelpTelephone="785-532-7722"
-          DisableModify="yes">
+          DisableModify="yes"
+          IconSourceFile="$(var.SolutionDir)\Media Files\scantron.ico">
     <BootstrapperApplicationRef Id="WixStandardBootstrapperApplication.RtfLicense">
-      <bal:WixStandardBootstrapperApplication LicenseFile="ScantronEULA.rtf"
-                                              LogoFile="ScantronPNG.png"/>
+      <bal:WixStandardBootstrapperApplication LicenseFile="$(var.SolutionDir)\Media Files\ScantronEULA.rtf"
+                                              LogoFile="$(var.SolutionDir)\Media Files\ScantronPNG.png"/>
     </BootstrapperApplicationRef>
 
 		<Chain>
