--- a/Scantron/Project Bootstrapper/Bundle.wxs
+++ b/Scantron/Project Bootstrapper/Bundle.wxs
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Property of the Kansas State University IT Help Desk -->
+<!-- Written by: William McCreight, Caleb Schweer, and Joseph Webster -->
+
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
      xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension"
      xmlns:bal="http://schemas.microsoft.com/wix/BalExtension">
@@ -9,8 +12,10 @@
           IconSourceFile="$(var.SolutionDir)\Media Files\scantron.ico">
     <BootstrapperApplicationRef Id="WixStandardBootstrapperApplication.RtfLicense">
       <bal:WixStandardBootstrapperApplication LicenseFile="$(var.SolutionDir)\Media Files\ScantronEULA.rtf"
-                                              LogoFile="$(var.SolutionDir)\Media Files\ScantronPNG.png"/>
+                                              LogoFile="$(var.SolutionDir)\Media Files\ScantronPNG.png"
+                                              />
     </BootstrapperApplicationRef>
+
 
 		<Chain>
       <!-- Runs a webinstall of .Net 4 if target computer does not have it-->
